# i-hate-time-tracking

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  aerich.ini  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
config/: coverage.ini
docs/: macros.py
docs/reference/: cli.md
migrations/models/: 0_20211003205601_init.sql
scripts/: multirun.sh  setup.sh
src/ihtt/: __init__.py  __main__.py  cli.py  db.py  models.py  schemas.py  service.py
src/ihtt_backend/: models.py
tests/: __init__.py  test_cli.py
